[package]
name = "adafruit_feather_rp2040_rfm95"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
display-interface-i2c = "0.5.0"
embassy-embedded-hal = "0.3.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-rp = { version = "0.4.0", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { version = "0.6.2" }
embassy-time = { version = "0.4.0" }
embassy-usb-logger = "0.4.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
log = "0.4.27"
lora-phy = "3.0.1"
oled_async = { git = "https://github.com/cschuhen/oled_drivers.git", rev = "fcc8291a6a6d0b050ec3cc7ed5730d5a466afcaa" }
panic-halt = "1.0.0"
pmsa003i = { version = "0.1.10", features = ["async"] }
portable-atomic = { version = "1.11.0", features = ["critical-section"] }
static_cell = "2.1.0"