[workspace]
resolver = "2"
members = [ "bsp", "node_a"]

[workspace.dependencies]
bsp = { path = "bsp" }
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1.2.0"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"

[profile.release]
debug = 2
lto = true
opt-level = "z"

[profile.dev]
debug = 2
lto = true
opt-level = "z"