[package]
name = "node_a"
version = "0.1.0"
edition = "2024"

[dependencies]
bsp = { workspace = true }
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
critical-section = { workspace = true }
embedded-hal = { workspace = true }
heapless = "0.8.0"
packed_struct = { version = "0.10.1", default-features = false }
panic-halt = { workspace = true }
pmsa003i = "0.1.11"
sht30 = { workspace = true }
sx127x_lora = "0.3.1"
usb-device = "0.3.2"
usbd-serial = "0.2.2"